adding the log crawler for failed projects

--- a/webtools_pictures_full_v1.ipynb
+++ b/webtools_pictures_full_v1.ipynb
@@ -1524,8 +1524,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "4767c775-15b0-4388-9234-713bf57338af",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# the cell that gets the names ... #new format should be a list with images having the first one as thumbnail in the same folder, the project.php is a mess"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "78652fd6-424d-4572-af19-fe49c94ca8b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "==================================================\n",
+      "❌ PROJECTS WITH AT LEAST ONE IMAGE FAILURE ❌\n",
+      "==================================================\n",
+      "    - brazilian-cherry-124\n",
+      "    - carpet-installation-404\n",
+      "    - hardwood-refinish-203\n",
+      "    - hardwood-refinish-204\n",
+      "    - hardwood-refinish-205\n",
+      "    - nylon-carpet-shaw-405\n",
+      "    - polyester-carpet-dreamweaver-405\n",
+      "==================================================\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "from pathlib import Path\n",
+    "\n",
+    "# Set the log file path\n",
+    "log_file_path = 'processed_gallery_images/image_processing.log'\n",
+    "\n",
+    "# Check if the file exists before attempting to read\n",
+    "if not Path(log_file_path).exists():\n",
+    "    print(f\"Error: Log file not found at {log_file_path}\")\n",
+    "else:\n",
+    "    failed_projects = set()\n",
+    "    current_project = None\n",
+    "    \n",
+    "    # Regex to capture the project slug: \"Processing Project: <slug> (<number> images)\"\n",
+    "    # It finds the text between \"Processing Project: \" and the opening parenthesis of the image count.\n",
+    "    project_start_pattern = re.compile(r\"Processing Project: (.*?) \\(\")\n",
+    "    \n",
+    "    # Read the log file line by line\n",
+    "    with open(log_file_path, 'r', encoding='utf-8') as f:\n",
+    "        for line in f:\n",
+    "            line = line.strip()\n",
+    "            \n",
+    "            # 1. Check for the start of a new project\n",
+    "            if \" - INFO - --- Processing Project:\" in line:\n",
+    "                match = project_start_pattern.search(line)\n",
+    "                if match:\n",
+    "                    # Capture the project slug (group 1)\n",
+    "                    current_project = match.group(1).strip()\n",
+    "                else:\n",
+    "                    current_project = None\n",
+    "                    \n",
+    "            # 2. Check for a failure within the current project\n",
+    "            # If a project is being tracked AND we see a failure warning\n",
+    "            elif current_project and \" - WARNING - FAILURE:\" in line:\n",
+    "                # Add the project slug to the set (sets automatically handle uniqueness)\n",
+    "                failed_projects.add(current_project)\n",
+    "\n",
+    "    # Print the final list of failed projects\n",
+    "    print(\"=\" * 50)\n",
+    "    print(\"❌ PROJECTS WITH AT LEAST ONE IMAGE FAILURE ❌\")\n",
+    "    print(\"=\" * 50)\n",
+    "    \n",
+    "    if failed_projects:\n",
+    "        for project in sorted(list(failed_projects)):\n",
+    "            print(f\"    - {project}\")\n",
+    "    else:\n",
+    "        print(\"🎉 All projects completed without a logged image failure.\")\n",
+    "\n",
+    "    print(\"=\" * 50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3060fae0-63af-4f0d-aaa7-b5424e681021",
    "metadata": {},
    "outputs": [],
    "source": []
